test/errors/templates_error/zs/instantiate_type_full_name_cycle_error.zs
package instantiate_type_full_name_cycle_error;

instantiate instantiate_type_full_name_cycle_error.Template<uint32> Template;
